fetched calendar data from cldr

--- a/core/Intl/Data/Resources/languages/pt-br.json
+++ b/core/Intl/Data/Resources/languages/pt-br.json
@@ -12,7 +12,7 @@
     "ay": "aimara",
     "az": "azerbaijano",
     "ba": "bashkir",
-    "be": "bielo-russo",
+    "be": "bielorrusso",
     "bg": "búlgaro",
     "bh": "biari",
     "bi": "bislamá",
@@ -81,7 +81,7 @@
     "kj": "kuanyama",
     "kk": "cazaque",
     "kl": "groenlandês",
-    "km": "cmer",
+    "km": "khmer",
     "kn": "canarês",
     "ko": "coreano",
     "kr": "canúri",
@@ -131,7 +131,7 @@
     "ps": "pashto",
     "pt": "português",
     "qu": "quíchua",
-    "rm": "reto-romano",
+    "rm": "romanche",
     "rn": "rundi",
     "ro": "romeno",
     "ru": "russo",
@@ -153,13 +153,13 @@
     "st": "soto do sul",
     "su": "sundanês",
     "sv": "sueco",
-    "sw": "suaili",
+    "sw": "suaíli",
     "ta": "tâmil",
     "te": "telugu",
-    "tg": "tadjique",
+    "tg": "tajique",
     "th": "tailandês",
     "ti": "tigrínia",
-    "tk": "turcomano",
+    "tk": "turcomeno",
     "tl": "tagalo",
     "tn": "tswana",
     "to": "tonganês",
@@ -168,7 +168,7 @@
     "tt": "tatar",
     "tw": "twi",
     "ty": "taitiano",
-    "ug": "uighur",
+    "ug": "uigur",
     "uk": "ucraniano",
     "ur": "urdu",
     "uz": "usbeque",
