--- a/core/Intl/Data/Resources/languages/pt.json
+++ b/core/Intl/Data/Resources/languages/pt.json
@@ -2,7 +2,7 @@
     "aa": "afar",
     "ab": "abcázio",
     "ae": "avéstico",
-    "af": "africâner",
+    "af": "africânder",
     "ak": "akan",
     "am": "amárico",
     "an": "aragonês",
@@ -26,7 +26,7 @@
     "ch": "chamorro",
     "co": "córsico",
     "cr": "cree",
-    "cs": "tcheco",
+    "cs": "checo",
     "cu": "eslavo eclesiástico",
     "cv": "chuvash",
     "cy": "galês",
@@ -34,12 +34,12 @@
     "de": "alemão",
     "dv": "divehi",
     "dz": "dzonga",
-    "ee": "eve",
+    "ee": "ewe",
     "el": "grego",
     "en": "inglês",
     "eo": "esperanto",
     "es": "espanhol",
-    "et": "estoniano",
+    "et": "estónio",
     "eu": "basco",
     "fa": "persa",
     "ff": "fula",
@@ -47,26 +47,26 @@
     "fj": "fijiano",
     "fo": "feroês",
     "fr": "francês",
-    "fy": "frísio ocidental",
+    "fy": "frísico ocidental",
     "ga": "irlandês",
     "gd": "gaélico escocês",
     "gl": "galego",
     "gn": "guarani",
     "gu": "guzerate",
     "gv": "manx",
-    "ha": "hauçá",
+    "ha": "haúça",
     "he": "hebraico",
-    "hi": "híndi",
+    "hi": "hindi",
     "ho": "hiri motu",
     "hr": "croata",
     "ht": "haitiano",
     "hu": "húngaro",
-    "hy": "armênio",
+    "hy": "arménio",
     "hz": "herero",
     "ia": "interlíngua",
     "id": "indonésio",
     "ie": "interlingue",
-    "ig": "ibo",
+    "ig": "igbo",
     "ii": "sichuan yi",
     "ik": "inupiaque",
     "io": "ido",
@@ -76,13 +76,13 @@
     "ja": "japonês",
     "jv": "javanês",
     "ka": "georgiano",
-    "kg": "congolês",
+    "kg": "conguês",
     "ki": "quicuio",
     "kj": "kuanyama",
     "kk": "cazaque",
     "kl": "groenlandês",
     "km": "khmer",
-    "kn": "canarês",
+    "kn": "canarim",
     "ko": "coreano",
     "kr": "canúri",
     "ks": "caxemira",
@@ -92,7 +92,7 @@
     "ky": "quirguiz",
     "la": "latim",
     "lb": "luxemburguês",
-    "lg": "luganda",
+    "lg": "ganda",
     "li": "limburguês",
     "ln": "lingala",
     "lo": "laosiano",
@@ -102,7 +102,7 @@
     "mg": "malgaxe",
     "mh": "marshalês",
     "mi": "maori",
-    "mk": "macedônio",
+    "mk": "macedónio",
     "ml": "malaiala",
     "mn": "mongol",
     "mr": "marata",
@@ -110,25 +110,25 @@
     "mt": "maltês",
     "my": "birmanês",
     "na": "nauruano",
-    "nb": "bokmål norueguês",
+    "nb": "norueguês bokmål",
     "nd": "ndebele do norte",
     "ne": "nepali",
     "ng": "dongo",
     "nl": "holandês",
-    "nn": "nynorsk norueguês",
+    "nn": "norueguês nynorsk",
     "no": "norueguês",
     "nr": "ndebele do sul",
     "nv": "navajo",
     "ny": "nianja",
-    "oc": "occitânico",
+    "oc": "provençal",
     "oj": "ojibwa",
     "om": "oromo",
     "or": "oriya",
-    "os": "ossetic",
+    "os": "ossético",
     "pa": "panjabi",
     "pi": "páli",
-    "pl": "polonês",
-    "ps": "pashto",
+    "pl": "polaco",
+    "ps": "pastó",
     "pt": "português",
     "qu": "quíchua",
     "rm": "romanche",
@@ -159,10 +159,10 @@
     "tg": "tajique",
     "th": "tailandês",
     "ti": "tigrínia",
-    "tk": "turcomeno",
+    "tk": "turcomano",
     "tl": "tagalo",
     "tn": "tswana",
-    "to": "tonganês",
+    "to": "tonga",
     "tr": "turco",
     "ts": "tsonga",
     "tt": "tatar",
