--- a/core/Intl/Data/Resources/languages/tl.json
+++ b/core/Intl/Data/Resources/languages/tl.json
@@ -2,7 +2,7 @@
     "aa": "Afar",
     "ab": "Abkhazian",
     "ae": "Avestan",
-    "af": "Aprikaans",
+    "af": "Afrikaans",
     "ak": "Akan",
     "am": "Amharic",
     "an": "Aragonese",
@@ -18,38 +18,38 @@
     "bi": "Bislama",
     "bm": "Bambara",
     "bn": "Bengali",
-    "bo": "Tibet",
+    "bo": "Tibetan",
     "br": "Breton",
     "bs": "Bosnian",
-    "ca": "Katalan",
+    "ca": "Catalan",
     "ce": "Chechen",
     "ch": "Chamorro",
-    "co": "Cosican",
+    "co": "Corsican",
     "cr": "Cree",
-    "cs": "Tsek",
+    "cs": "Czech",
     "cu": "Iglesia ng Eslabo",
     "cv": "Tsubas",
     "cy": "Welsh",
     "da": "Danish",
-    "de": "Aleman",
+    "de": "German",
     "dv": "Divehi",
-    "dz": "Dzongka",
+    "dz": "Dzongkha",
     "ee": "Ewe",
-    "el": "Griyego",
+    "el": "Greek",
     "en": "Ingles",
     "eo": "Esperanto",
-    "es": "Espanyol",
-    "et": "taga-Estonya",
-    "eu": "Basko",
-    "fa": "Persyano",
+    "es": "Spanish",
+    "et": "Estonian",
+    "eu": "Basque",
+    "fa": "Persian",
     "ff": "Fulah",
     "fi": "Finnish",
     "fj": "Fijian",
     "fo": "Faroese",
-    "fr": "Pranses",
+    "fr": "French",
     "fy": "Western Frisian",
-    "ga": "Irlandes",
-    "gd": "Scottish Gaelic",
+    "ga": "Irish",
+    "gd": "Scots Gaelic",
     "gl": "Galician",
     "gn": "Guarani",
     "gu": "Gujarati",
@@ -58,38 +58,38 @@
     "he": "Hebrew",
     "hi": "Hindi",
     "ho": "Hiri Motu",
-    "hr": "Kroatyano",
-    "ht": "Haitian Creole",
-    "hu": "Hanggaryan",
-    "hy": "Armenyo",
+    "hr": "Croatian",
+    "ht": "Haitian",
+    "hu": "Hungarian",
+    "hy": "Armenian",
     "hz": "Herero",
     "ia": "Interlingua",
-    "id": "Indonesiyo",
+    "id": "Indonesian",
     "ie": "Interlingue",
-    "ig": "",
+    "ig": "Igbo",
     "ii": "Sichuan Yi",
     "ik": "Inupiaq",
     "io": "Ido",
     "is": "Icelandic",
-    "it": "Italyano",
+    "it": "Italian",
     "iu": "Inuktitut",
-    "ja": "Nippongo",
+    "ja": "Japanese",
     "jv": "Javanese",
-    "ka": "taga-Georgia",
+    "ka": "Georgian",
     "kg": "Kongo",
-    "ki": "Kukuyu",
+    "ki": "Kikuyu",
     "kj": "Kuanyama",
-    "kk": "Kasak",
-    "kl": "Greenlandic",
-    "km": "Central Khmer",
+    "kk": "Kazakh",
+    "kl": "Kalaallisut",
+    "km": "Khmer",
     "kn": "Kannada",
-    "ko": "Koreano",
+    "ko": "Korean",
     "kr": "Kanuri",
     "ks": "Kashmiri",
     "ku": "Kurdish",
     "kv": "Komi",
     "kw": "Cornish",
-    "ky": "Kirgis",
+    "ky": "Kirghiz",
     "la": "Latin",
     "lb": "Luxembourgish",
     "lg": "Ganda",
@@ -99,42 +99,42 @@
     "lt": "Lithuanian",
     "lu": "Luba-Katanga",
     "lv": "Latvian",
-    "mg": "Malagasi",
+    "mg": "Malagasy",
     "mh": "Marshallese",
     "mi": "Maori",
-    "mk": "Masidoniyan",
+    "mk": "Macedonian",
     "ml": "Malayalam",
-    "mn": "Monggolyan",
+    "mn": "Mongolian",
     "mr": "Marathi",
     "ms": "Malay",
-    "mt": "Maltis",
+    "mt": "Maltese",
     "my": "Burmese",
     "na": "Nauru",
-    "nb": "Norwegian Bokmål",
+    "nb": "Norwegian Bokmal",
     "nd": "North Ndebele",
     "ne": "Nepali",
     "ng": "Ndonga",
-    "nl": "Olandes",
+    "nl": "Dutch",
     "nn": "Norwegian Nynorsk",
     "no": "Norwegian",
     "nr": "South Ndebele",
     "nv": "Navajo",
-    "ny": "Chichewa",
+    "ny": "Nyanja",
     "oc": "Occitan",
     "oj": "Ojibwa",
-    "om": "Oroma",
+    "om": "Oromo",
     "or": "Oriya",
-    "os": "Osit",
-    "pa": "Panjabi",
+    "os": "Ossetic",
+    "pa": "Punjabi",
     "pi": "Pali",
     "pl": "Polish",
     "ps": "Pashto",
-    "pt": "Portuguese",
+    "pt": "Portuges",
     "qu": "Quechua",
-    "rm": "Raeto-Romance",
+    "rm": "Romansh",
     "rn": "Rundi",
-    "ro": "Romano",
-    "ru": "Ruso",
+    "ro": "Romanian",
+    "ru": "Russian",
     "rw": "Kinyarwanda",
     "sa": "Sanskrit",
     "sc": "Sardiniyan",
@@ -142,45 +142,45 @@
     "se": "Northern Sami",
     "sg": "Sango",
     "si": "Sinhala",
-    "sk": "Eslobako",
-    "sl": "Eslobenyan",
+    "sk": "Slovak",
+    "sl": "Slovenian",
     "sm": "Samoan",
     "sn": "Shona",
     "so": "Somali",
-    "sq": "Albanes",
-    "sr": "Serbyan",
+    "sq": "Albanian",
+    "sr": "Serbian",
     "ss": "Swati",
-    "st": "Sotho",
+    "st": "Southern Sotho",
     "su": "Sundanese",
-    "sv": "Suweko",
+    "sv": "Swedish",
     "sw": "Swahili",
     "ta": "Tamil",
     "te": "Telugu",
-    "tg": "Tadyiko",
+    "tg": "Tajik",
     "th": "Thai",
     "ti": "Tigrinya",
     "tk": "Turkmen",
     "tl": "Tagalog",
     "tn": "Tswana",
-    "to": "Tonga",
-    "tr": "Turko",
+    "to": "Tongan",
+    "tr": "Turkish",
     "ts": "Tsonga",
-    "tt": "Tartaro",
+    "tt": "Tatar",
     "tw": "Twi",
     "ty": "Tahitian",
-    "ug": "Uighur",
+    "ug": "Uyghur",
     "uk": "Ukranian",
     "ur": "Urdu",
-    "uz": "Usbek",
+    "uz": "Uzbek",
     "ve": "Venda",
     "vi": "Vietnamese",
     "vo": "Volapuk",
     "wa": "Walloon",
     "wo": "Wolof",
     "xh": "Xhosa",
-    "yi": "Yidish",
+    "yi": "Yiddish",
     "yo": "Yoruba",
     "za": "Chuang",
-    "zh": "Tsino",
+    "zh": "Chinese",
     "zu": "Zulu"
 }
